[tool.poetry]
name = "impact"
version = "0.1.0"
description = ""
authors = ["ldlac <this@elixin.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
distribute = "^0.7.3"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
